# blazar

./: .gitignore  .gitreview  .stestr.conf  .testr.conf  .travis.yml  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  Jenkinsfile  MANIFEST.in  README.md  README.rst  bindep.txt  lower-constraints.txt  openstack-common.conf  pylintrc  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
api-ref/source/: conf.py  index.rst
api-ref/source/v1/: floatingips.inc  global-request-id.inc  hosts.inc  index.rst  leases.inc  parameters.yaml  request-ids.inc
blazar/: __init__.py  config.py  context.py  exceptions.py  i18n.py  opts.py  policy.py  rpc.py  states.py  status.py  version.py
blazar/api/: app.py  context.py  root.py  wsgi_app.py
blazar/api/v1/: api_version_request.py  app.py  request_id.py  request_log.py  rest_api_version_history.rst  service.py  utils.py  v1_0.py  validation.py
blazar/api/v2/: app.py  hooks.py
blazar/cmd/: api.py  manager.py  status.py
blazar/db/: api.py  base.py  exceptions.py  utils.py
blazar/db/migration/: README  alembic.ini  cli.py
blazar/db/sqlalchemy/: api.py  facade_wrapper.py  model_base.py  models.py  types.py  utils.py
blazar/enforcement/: __init__.py  enforcement.py  exceptions.py
blazar/enforcement/filters/: __init__.py  base_filter.py  external_service_filter.py  max_lease_duration_filter.py
blazar/hacking/: checks.py
blazar/manager/: __init__.py  enforcement.py  exceptions.py  service.py
blazar/manager/floatingips/: rpcapi.py
blazar/manager/leases/: rpcapi.py
blazar/manager/networks/: rpcapi.py
blazar/manager/oshosts/: rpcapi.py
blazar/monitor/: __init__.py  base.py  notification_monitor.py  polling_monitor.py
blazar/notification/: api.py  notifier.py
blazar/plugins/: base.py  dummy_vm_plugin.py
blazar/plugins/flavor/: __init__.py  flavor_plugin.py
blazar/plugins/floatingips/: __init__.py  billrate.py  floatingip_plugin.py
blazar/plugins/instances/: __init__.py  instance_plugin.py  vm_plugin.py
blazar/plugins/networks/: __init__.py  billrate.py  network_plugin.py
blazar/plugins/oshosts/: __init__.py  (+4 more)
blazar/policies/: __init__.py  base.py  floatingips.py  leases.py  networks.py  oshosts.py
blazar/tests/: __init__.py  fake_lease.py  fake_policy.py  fake_requests.py  test_context.py  test_exceptions.py  test_policy.py  test_service.py  test_states.py  test_status.py
blazar/utils/: __init__.py  plugins.py  service.py  trusts.py
blazar/wsgi/: api.py
blazar_tempest_plugin/: README.rst  config.py  plugin.py
climate/: config.py  context.py  exceptions.py  i18n.py  opts.py  policy.py  states.py  test.py  version.py
climate/api/: app.py  context.py  root.py  service.py  utils.py  v1_0.py  validation.py
climate/cmd/: api.py  climate_scheduler.py  manager.py  scheduler.py
climate/db/: api.py  base.py  exceptions.py  utils.py
climate/inventory/: __init__.py  nova.py
climate/locale/: README  climate.pot
climate/manager/: __init__.py  exceptions.py  rpcapi.py  service.py
climate/notification/: api.py  notifier.py
climate/nova/: climate_filter.py
climate/plugins/: base.py  dummy_vm_plugin.py  physical_host_plugin.py
climate/scheduler/: service.py
climate/tests/: __init__.py  fake_lease.py  fake_policy.py  test_context.py  test_exceptions.py  test_policy.py  test_service.py  test_states.py
climate/utils/: service.py  trusts.py
contrib/devstack/: README.rst
contrib/tempest/: README.rst
devstack/: plugin.sh  settings
doc/: requirements.txt
doc/source/: architecture.rst  conf.py  index.rst  introduction.rst  rest_api_v1.0.rst
etc/: climate.conf.example  policy.json
etc/blazar/: README-blazar.conf.txt  blazar-config-generator.conf  blazar-policy-generator.conf
etc/climate/: README-climate.conf.txt  climate-config-generator.conf  climate.conf.sample
releasenotes/notes/: add-enforcement-exceptions-non-fatal-b22c129dfd9267ef.yaml  add-newly-allocated-hosts-to-aggregate-95bb75410afc6b8d.yaml  alembic-fix-alter-column-42a87657992d1e78.yaml  allow-multiple-api-single-manager-199e50692a31d6e9.yaml  api-microversioning-141e473bff34aad2.yaml  before-end-actions-7e53e740e006195a.yaml  blazar-status-upgrade-check-framework-895079486d8085f2.yaml  bug-1779660-b623de868955e7d9.yaml  bug-1786031-800a33c681fafdc0.yaml  bug-1786031-836c6d6acae08403.yaml  bug-1847821-2f9d6e61f438dc4f.yaml  bug-1880646-f1af8c48f895f00e.yaml  bug-1881162-ebe012fcc7176594.yaml  bug-1957761-8b126a392c0c79ee.yaml  bug-1958307-63bf308ca6a97068.yaml  cleaning-time-825d148b704b0c56.yaml  create-extra-capabilities-in-update-host-c74ce75c88e88c67.yaml  delete-on-end-3a6d3ced93ffed25.yaml  deprecate-climate-filter-f1ffca52a7a4e70c.yaml  deprecate-json-formatted-policy-file-5ceba2a580b69101.yaml  devstack-dashboard-1b96128952e64c1f.yaml  drop-python-3-8-and-3-9-232826086bf12ac5.yaml  drop-python2-support-148148077280122c.yaml  event-retry-bfe13bccbcad1e74.yaml  external-enforcement-filter-6e8fee75580fc169.yaml  fix-host-randomization-bcab5276ef6199e6.yaml  fix-owner-policy-enforcement-57a6d71c37ffec3d.yaml  fix-updating-amount-in-instance-reservations-52e6e3a413a0176f.yaml  flavor-based-instance-reservation-5a375363e8011775.yaml  flavor-trait-support-da9f68a3bf600fe7.yaml  floatingip-reservation-6c2f3c3ad8843948.yaml  floatingip-reservation-update-f53c0c6239ccf9ee.yaml  global_request_id-f30e900f20752c2b.yaml  host-allocation-dates-6da5ac1ec9befa8f.yaml  host-dashboard-570a9971be1a86ba.yaml  internal-endpoint-interface-748511b8b25455c6.yaml  issue-instance-reservation-7b3c0868caaabc85.yaml  lease-entire-data-in-payload-8828ef1288c436fe.yaml  move-hosts-back-to-freepool-041fcda9fb3fc6c3.yaml  move-specs-cf3568febaaf3b1c.yaml  (+26 more)
releasenotes/source/: conf.py  index.rst  ocata.rst  pike.rst  queens.rst  rocky.rst  train.rst  unreleased.rst  xena.rst
tests/: test_service.py
tests/db/: test_api.py
tests/inventory/: test_nova.py
tests_nova_scheduler/: __init__.py  test_climate_scheduler.py
tools/: pip-requires  test-requires
tools/config/: check_uptodate.sh  generate_sample.sh  oslo.config.generator.rc
(+352 files in other folders)
