[metadata]
name = blazar
summary = Reservation Service for OpenStack clouds
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Development Status :: 3 - Alpha,
    Framework :: Setuptools Plugin,
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author_email = openstack-dev@lists.openstack.org
home-page = https://launchpad.net/blazar

[global]
setup-hooks = pbr.hooks.setup_hook

[files]
packages =
    blazar

[entry_points]
console_scripts =
    # Remove this alias when the deprecation period of "climate" is over
    climate-db-manage=blazar.db.migration.cli:main
    climate-api=blazar.cmd.api:main
    climate-rpc-zmq-receiver=blazar.cmd.rpc_zmq_receiver:main
    climate-manager=blazar.cmd.manager:main

    blazar-db-manage=blazar.db.migration.cli:main
    blazar-api=blazar.cmd.api:main
    blazar-rpc-zmq-receiver=blazar.cmd.rpc_zmq_receiver:main
    blazar-manager=blazar.cmd.manager:main

blazar.resource.plugins =
    dummy.vm.plugin=blazar.plugins.dummy_vm_plugin:DummyVMPlugin
    physical.host.plugin=blazar.plugins.oshosts.host_plugin:PhysicalHostPlugin
    virtual.instance.plugin=blazar.plugins.instances.instance_plugin:VirtualInstancePlugin

# Remove this alias when the deprecation period of "climate" is over
climate.api.v2.controllers.extensions =
    oshosts=blazar.api.v2.controllers.extensions.host:HostsController
    leases=blazar.api.v2.controllers.extensions.lease:LeasesController

blazar.api.v2.controllers.extensions =
    oshosts=blazar.api.v2.controllers.extensions.host:HostsController
    leases=blazar.api.v2.controllers.extensions.lease:LeasesController

oslo.config.opts =
    blazar = blazar.opts:list_opts

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[extract_messages]
keywords = _
mapping_file = babel.cfg
output_file = blazar/locale/blazar.pot
