[metadata]
name = blazar
summary = Reservation Service for OpenStack clouds
description_file = README.rst
license = Apache Software License
python_requires = >=3.8
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Environment :: OpenStack
    Development Status :: 3 - Alpha
    Framework :: Setuptools Plugin
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/blazar/latest/

[files]
packages =
    blazar

[entry_points]
console_scripts =
    blazar-db-manage=blazar.db.migration.cli:main
    blazar-api=blazar.cmd.api:main
    blazar-rpc-zmq-receiver=blazar.cmd.rpc_zmq_receiver:main
    blazar-manager=blazar.cmd.manager:main
    blazar-status=blazar.cmd.status:main

blazar.resource.plugins =
    dummy.vm.plugin=blazar.plugins.dummy_vm_plugin:DummyVMPlugin
    physical.host.plugin=blazar.plugins.oshosts.host_plugin:PhysicalHostPlugin
    virtual.instance.plugin=blazar.plugins.instances.instance_plugin:VirtualInstancePlugin
    virtual.floatingip.plugin=blazar.plugins.floatingips.floatingip_plugin:FloatingIpPlugin

blazar.api.v1.extensions =
    leases=blazar.api.v1.leases.v1_0:get_rest
    physical.host.plugin=blazar.api.v1.oshosts.v1_0:get_rest
    virtual.floatingip.plugin=blazar.api.v1.floatingips.v1_0:get_rest

blazar.api.v2.controllers.extensions =
    oshosts=blazar.api.v2.controllers.extensions.host:HostsController
    leases=blazar.api.v2.controllers.extensions.lease:LeasesController

oslo.config.opts =
    blazar = blazar.opts:list_opts
oslo.config.opts.defaults =
    blazar = blazar.config:set_lib_defaults

oslo.policy.policies =
    blazar = blazar.policies:list_rules

wsgi_scripts =
    blazar-api-wsgi = blazar.api.wsgi_app:init_app

